@@ -1,5 +1,5 @@
 @c "usage.texi"
-@c $Id: usage.texi,v 1.5 2009/10/06 17:08:44 fang Exp $
+@c $Id: usage.texi,v 1.6 2009/10/16 20:38:40 fang Exp $
 
 @node Usage
 @chapter Usage
@@ -43,6 +43,7 @@ and the argument is optional.
 @include opt/option-I-upper.texi
 @include opt/option-t.texi
 @include opt/option-T-upper.texi
+@include opt/option-v.texi
 
 @c ****************************************************************************
 @c section
