@@ -1,5 +1,5 @@
 @c "hacprsim/usage.texi"
-@c $Id: usage.texi,v 1.5 2009/02/01 07:21:12 fang Exp $
+@c $Id: usage.texi,v 1.6 2009/10/16 20:38:41 fang Exp $
 
 @node Usage
 @chapter Usage
@@ -21,6 +21,7 @@
 @include opt/option-t.texi
 @include opt/option-c.texi
 @include opt/option-C-upper.texi
+@include opt/option-v.texi
 
 @menu
 * General Flags::
